--- a/game-pulse.UI/src/app/profile/page.scss
+++ b/game-pulse.UI/src/app/profile/page.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
 :root {
   --bg-gradient-onyx: linear-gradient(to bottom right, hsl(240, 1%, 25%) 3%, hsl(0, 0%, 19%) 97%);
   --bg-gradient-jet: linear-gradient(to bottom right, hsla(240, 1%, 18%, 0.251) 3%, hsla(240, 2%, 11%, 0) 100%), hsl(240, 2%, 13%);
@@ -62,25 +60,6 @@
   height: 1px;
   background: var(--jet);
   margin: 16px 0;
-}
-
-.has-scrollbar::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
-}
-
-.has-scrollbar::-webkit-scrollbar-track {
-  background: var(--onyx);
-  border-radius: 5px;
-}
-
-.has-scrollbar::-webkit-scrollbar-thumb {
-  background: var(--orange-yellow-crayola);
-  border-radius: 5px;
-}
-
-.has-scrollbar::-webkit-scrollbar-button {
-  width: 20px;
 }
 
 /*ASIDE - SIDEBAR*/
@@ -361,10 +340,6 @@
     width: 55%;
   }
 
-  .has-scrollbar::-webkit-scrollbar-button {
-    width: 100px;
-  }
-
   .contacts-list {
     grid-template-columns: 1fr;
   }
@@ -378,27 +353,6 @@
 }
 
 @media (min-width: 1250px) {
-  body::-webkit-scrollbar {
-    width: 20px;
-  }
-  body::-webkit-scrollbar-track {
-    background: var(--smoky-black);
-  }
-
-  body::-webkit-scrollbar-thumb {
-    border: 5px solid var(--smoky-black);
-    background: hsla(0, 0%, 100%, 0.1);
-    border-radius: 20px;
-    box-shadow: inset 1px 1px 0 hsla(0, 0%, 100%, 0.11), inset -1px -1px 0 hsla(0, 0%, 100%, 0.11);
-  }
-
-  body::-webkit-scrollbar-thumb:hover {
-    background: hsla(0, 0%, 100%, 0.15);
-  }
-  body::-webkit-scrollbar-button {
-    height: 60px;
-  }
-
   .sidebar {
     width: 30%;
     top: 60px;
